# gaussian-elimination-optimizations

./: CMakeLists.txt  README.md
report/: report.ipynb
src/: benchmark.c  benchmark.h  ge1.c  ge2.c  ge3.c  ge4.c  ge5.c  ge6.c  ge7.c  ge8.c
